[project]
name = "texflow"
version = "0.1.0"
description = "Supercharge your texturing workflow with AI"
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "accelerate>=1.0.0",
    "diffusers>=0.30.3",
    "numpy==1.26.3",
    "pillow>=10.2.0",
    "toml>=0.10.2",
    "torch>=2.4.1",
    "transformers>=4.45.2",
]

[tool.uv]
dev-dependencies = [
    "bpy>=4.2.0",
    "bpython>=0.24",
    "fake-bpy-module>=20241010",
]
